wrap fix

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -4130,7 +4130,7 @@ header.page-header {
 	}
 
 	.wrap {
-		margin-top: 280px;
+		margin-top: 280px !important;
 
 		@media screen and (max-width: 992px) {
   			margin-top: 180px !important;
